Fix nav overlap

--- a/src/_includes/components/header.css
+++ b/src/_includes/components/header.css
@@ -11,6 +11,7 @@ header {
 .home img {
     width: 2em;
     height: 2em;
+    max-width: 2em;
     margin-right: .1em;
 }
 
